# Domain/Entities/Flight.cs
@@ -58,6 +58,22 @@ namespace Flights7.Domain.Entities
 
             return null;
         }
+
+        public object? CancelBooking(string passengerEmail, byte numberOfSeats)
+        {
+            var booking = Bookings.FirstOrDefault(b => numberOfSeats == b.NumberOfSeats 
+                && passengerEmail.ToLower() == b.PassengerEmail.ToLower());
+
+            if (booking == null)
+            {
+                return new NotFoundError();
+            }
+
+            Bookings.Remove(booking);
+            RemainingNumberOfSeats += booking.NumberOfSeats;
+
+            return null;
+        }
     }
 
 }
