# ReadModels/BookingRm.cs
@@ -1,0 +1,11 @@
+﻿namespace Flights7.ReadModels
+{
+    public record BookingRm(
+        Guid FlightId,
+        string Airline,
+        string Price,
+        TimePlaceRm Arrival,
+        TimePlaceRm Departure,
+        int NumberOfBookedSeats,
+        string PassengerEmail);
+}
